# ocaml-close

./: .gitignore  .ocamlclose  .ocamlclose.json  README.md  dune-project  flake.nix  ocamlclose.opam  ocamlclose.opam.template  package-defs.json
lib/: analysis.ml  analysis.mli  close.ml  close.mli  conf.ml  conf.mli  decision.ml  decision.mli  dune  dune.ml  dune.mli  index.mld  merlin.ml  merlin.mli  params.ml  params.mli  patch.ml  patch.mli  piece_table.ml  piece_table.mli  summary.ml  summary.mli  syntactic.ml  syntactic.mli  typed.ml  typed.mli  usedef.ml  usedef.mli  utils.ml
src/: close.ml  dune  merlin.ml  run.ml  syntactic.ml  utils.ml
test/: dune  library.ml  open_scope.ml  open_structure.ml  test.ml  tests.expected
