(library
  (name closelib)
  (package ocamlclose)
  (libraries ocaml-compiler-libs.common
             feather stdio fpath core sexplib progress csexp parmap)
  (inline_tests)
  (preprocess
    (pps ppxlib.metaquot ppx_deriving.show ppx_deriving.ord
         ppx_sexp_conv ppx_inline_test ppx_expect)))

(documentation (mld_files :standard))
