(executable
  (name test))

(rule
  (targets tests.output)
  (deps ../bin/run.exe (alias check) ../.ocamlclose)
  (action
    (with-outputs-to tests.output
     (progn
       (pipe-stdout
         (run find)
         (run grep cmt)
         (run xargs ../bin/run.exe dump -r text))))))

(rule
  (alias runtest)
  (action (diff tests.expected tests.output)))
